[gd_scene load_steps=54 format=3 uid="uid://bwwmacs6k1qpn"]

[ext_resource type="Script" uid="uid://cxxkuu8wxr0wm" path="res://Scenes/Player/player.gd" id="1_jlvik"]
[ext_resource type="Texture2D" uid="uid://nlu2l7mbj86d" path="res://Assets/Player/_Attack.png" id="2_gk6dx"]
[ext_resource type="Texture2D" uid="uid://di3eseebnh08u" path="res://Assets/Player/_Death.png" id="3_jhyir"]
[ext_resource type="Texture2D" uid="uid://bkq6tyk5cgnsf" path="res://Assets/Player/_Fall.png" id="4_74mp2"]
[ext_resource type="Texture2D" uid="uid://cnfyswmi714fu" path="res://Assets/Player/_Hit.png" id="5_oikmp"]
[ext_resource type="Texture2D" uid="uid://b15b2i6g5bbt5" path="res://Assets/Player/_Idle.png" id="6_06tpx"]
[ext_resource type="Texture2D" uid="uid://ccpr5mpvl76w" path="res://Assets/Player/_Jump.png" id="7_7g0yx"]
[ext_resource type="Texture2D" uid="uid://dnsy5s5vxctfw" path="res://Assets/Player/_Run.png" id="8_dey5f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("2_gk6dx")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("2_gk6dx")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("2_gk6dx")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("2_gk6dx")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("3_jhyir")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("3_jhyir")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("3_jhyir")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("3_jhyir")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("3_jhyir")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("3_jhyir")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("3_jhyir")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("3_jhyir")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("3_jhyir")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("3_jhyir")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlvik"]
atlas = ExtResource("4_74mp2")
region = Rect2(0, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk6dx"]
atlas = ExtResource("4_74mp2")
region = Rect2(120, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhyir"]
atlas = ExtResource("4_74mp2")
region = Rect2(240, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuaoq"]
atlas = ExtResource("5_oikmp")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_74mp2"]
atlas = ExtResource("6_06tpx")
region = Rect2(0, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oikmp"]
atlas = ExtResource("6_06tpx")
region = Rect2(120, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_06tpx"]
atlas = ExtResource("6_06tpx")
region = Rect2(240, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g0yx"]
atlas = ExtResource("6_06tpx")
region = Rect2(360, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dey5f"]
atlas = ExtResource("6_06tpx")
region = Rect2(480, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5xpd"]
atlas = ExtResource("6_06tpx")
region = Rect2(600, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks1b7"]
atlas = ExtResource("6_06tpx")
region = Rect2(720, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnuln"]
atlas = ExtResource("6_06tpx")
region = Rect2(840, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqm4k"]
atlas = ExtResource("6_06tpx")
region = Rect2(960, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcvs5"]
atlas = ExtResource("6_06tpx")
region = Rect2(1080, 0, 110, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph33w"]
atlas = ExtResource("7_7g0yx")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ldla"]
atlas = ExtResource("7_7g0yx")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7t2e"]
atlas = ExtResource("7_7g0yx")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmr2m"]
atlas = ExtResource("8_dey5f")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax3m3"]
atlas = ExtResource("8_dey5f")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vlem"]
atlas = ExtResource("8_dey5f")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eeqe"]
atlas = ExtResource("8_dey5f")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x828"]
atlas = ExtResource("8_dey5f")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1k8q"]
atlas = ExtResource("8_dey5f")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6mvm"]
atlas = ExtResource("8_dey5f")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_57lvd"]
atlas = ExtResource("8_dey5f")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie7r7"]
atlas = ExtResource("8_dey5f")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq3lt"]
atlas = ExtResource("8_dey5f")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_pukcj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlvik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk6dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhyir")
}],
"loop": true,
"name": &"Fall",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuaoq")
}],
"loop": true,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_74mp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oikmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06tpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g0yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dey5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5xpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks1b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnuln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqm4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcvs5")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph33w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ldla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7t2e")
}],
"loop": true,
"name": &"Jump",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmr2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax3m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vlem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eeqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x828")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1k8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6mvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57lvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie7r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq3lt")
}],
"loop": true,
"name": &"Run",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1htnp"]
size = Vector2(16, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jlvik"]
size = Vector2(51.5, 38)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jlvik"]
height = 44.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_jlvik")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.968627)
sprite_frames = SubResource("SpriteFrames_pukcj")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 21.5)
shape = SubResource("RectangleShape2D_1htnp")

[node name="FloorDetector" type="RayCast2D" parent="."]
position = Vector2(0, 16)
target_position = Vector2(0, 31)

[node name="AttackHitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionHitbox" type="CollisionShape2D" parent="AttackHitbox"]
unique_name_in_owner = true
position = Vector2(30.75, 21)
shape = SubResource("RectangleShape2D_jlvik")
debug_color = Color(0.808637, 0.117218, 6.73831e-07, 0.42)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 21)
shape = SubResource("CapsuleShape2D_jlvik")
debug_color = Color(0.494654, 0.581053, 0.130899, 0.42)

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_bottom = 0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
